feMorphology is not rendered correctly on Retina display https://bugs.webkit.org/show_bug.cgi?id=147589

Patch by Said Abou-Hallawa <sabouhallawa@apple.com> on 2015-08-11
Reviewed by Dean Jackson.

Source/WebCore:

The result ImageBuffer of any FilterEffect is already scaled up for 2x
display. The FEMorphology needs to fix its painting data dimension and
radius by multiplying them by the filter scale factor.

Test: fast/hidpi/filters-morphology.html

* platform/graphics/filters/FEMorphology.cpp:
(WebCore::FEMorphology::platformApplySoftware):

LayoutTests:

Ensure we take the filter scale factor into consideration when applying
the FEMorphology.

* fast/hidpi/filters-morphology-expected.html: Added.
* fast/hidpi/filters-morphology.html: Added.

Canonical link: https://commits.webkit.org/165994@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@188271 268f45cc-cd09-0410-ab3c-d52691b4dbfc